Added *.bin support

--- a/ressources/interface.ui
+++ b/ressources/interface.ui
@@ -757,7 +757,7 @@ QListWidget#label_list::item:selected {
       <item>
        <widget class="QPushButton" name="button_save_label">
         <property name="text">
-         <string>Save Label to JSON</string>
+         <string>Save Label</string>
         </property>
         <property name="icon">
          <iconset>
