Update settings gui

--- a/labelCloud/ressources/settings_interface.ui
+++ b/labelCloud/ressources/settings_interface.ui
@@ -22,6 +22,40 @@
      <property name="rightMargin">
       <number>0</number>
      </property>
+     <item row="4" column="1">
+      <widget class="QLabel" name="label_pointsize">
+       <property name="toolTip">
+        <string>Rasterized diameter of each point from the point cloud.</string>
+       </property>
+       <property name="text">
+        <string>Point Size</string>
+       </property>
+      </widget>
+     </item>
+     <item row="13" column="2">
+      <widget class="QSpinBox" name="spinBox_viewingprecision">
+       <property name="toolTip">
+        <string>number of decimal places shown for the parameters of the active bounding box.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_standardzoom">
+       <property name="toolTip">
+        <string>Standard step for zooming.</string>
+       </property>
+       <property name="decimals">
+        <number>4</number>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2">
+      <widget class="QLineEdit" name="lineEdit_pointcolor">
+       <property name="toolTip">
+        <string>Point color for colorless point clouds (r,g,b).</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="1">
       <widget class="QLabel" name="title_filesettings">
        <property name="sizePolicy">
@@ -41,20 +75,28 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="label_labelfolder">
+     <item row="7" column="1">
+      <widget class="QLabel" name="label_pointcolor">
        <property name="toolTip">
-        <string>Path to the folder where the label files will be saved</string>
+        <string>Point color for colorless point clouds (r,g,b).</string>
        </property>
        <property name="text">
-        <string>Label Folder</string>
+        <string>Point Color
+(for colorless point clouds)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="2">
+      <widget class="QLineEdit" name="lineEdit_backgroundcolor">
+       <property name="toolTip">
+        <string>Background color of the point cloud viewer (rgb).</string>
        </property>
       </widget>
      </item>
      <item row="11" column="1" colspan="2">
       <widget class="QCheckBox" name="checkBox_showfloor">
        <property name="toolTip">
-        <string>Visualizes the pointcloud floor (x-y-plane) as a grid</string>
+        <string>Visualizes the pointcloud floor (x-y-plane) as a grid.</string>
        </property>
        <property name="text">
         <string>Show Point Cloud Floor (x-y-Plane)</string>
@@ -64,80 +106,26 @@
      <item row="8" column="1" colspan="2">
       <widget class="QCheckBox" name="checkBox_colorizecolorless">
        <property name="toolTip">
-        <string>Colerize colorless point clouds by height value</string>
+        <string>Colerize colorless point clouds by height value.</string>
        </property>
        <property name="text">
         <string>Colorize colorless point clouds by height</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_pointsize">
-       <property name="toolTip">
-        <string>Rasterized diameter of each point from the point cloud</string>
+     <item row="9" column="1">
+      <widget class="QLabel" name="title_userinterface">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
        </property>
-       <property name="decimals">
-        <number>1</number>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QLabel" name="label_standardtranslation">
-       <property name="toolTip">
-        <string>Standard step for point cloud translation</string>
+       <property name="styleSheet">
+        <string notr="true">margin-top: 10px</string>
        </property>
        <property name="text">
-        <string>Standard Translation</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2">
-      <widget class="QLineEdit" name="lineEdit_labelfolder">
-       <property name="toolTip">
-        <string>Path to the folder where the label files will be saved</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLabel" name="label_pointsize">
-       <property name="toolTip">
-        <string>Rasterized diameter of each point from the point cloud</string>
-       </property>
-       <property name="text">
-        <string>Point Size</string>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="1">
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="6" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_standardzoom">
-       <property name="toolTip">
-        <string>Standard step for zooming</string>
-       </property>
-       <property name="decimals">
-        <number>4</number>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_standardtranslation">
-       <property name="toolTip">
-        <string>Standard step for point cloud translation</string>
-       </property>
-       <property name="decimals">
-        <number>4</number>
+        <string>User Interface</string>
        </property>
       </widget>
      </item>
@@ -163,91 +151,128 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="2">
-      <widget class="QLineEdit" name="lineEdit_backgroundcolor">
+     <item row="2" column="1">
+      <widget class="QLabel" name="label_labelfolder">
        <property name="toolTip">
-        <string>Background color of the point cloud viewer (rgb)</string>
+        <string>Path to the folder where the label files will be saved.</string>
+       </property>
+       <property name="text">
+        <string>Label Folder</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="1" colspan="2">
-      <widget class="QCheckBox" name="checkBox_showbboxorientation">
+     <item row="5" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_standardtranslation">
        <property name="toolTip">
-        <string>Visualizes the object's orientation with an arrow</string>
+        <string>Standard step for point cloud translation.</string>
        </property>
-       <property name="text">
-        <string>Show Bounding Box Orientation</string>
+       <property name="decimals">
+        <number>4</number>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
-      <widget class="QLabel" name="label_pointcolor">
+     <item row="13" column="1">
+      <widget class="QLabel" name="label_viewingprecision">
        <property name="toolTip">
-        <string>Point color for colorless point clouds (r,g,b)</string>
+        <string>number of decimal places shown for the parameters of the active bounding box.</string>
        </property>
        <property name="text">
-        <string>Point Color
-(for colorless point clouds)</string>
+        <string>Viewing Precision of
+Bounding Box Parameter</string>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="1">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLabel" name="label_standardtranslation">
+       <property name="toolTip">
+        <string>Standard step for point cloud translation.</string>
+       </property>
+       <property name="text">
+        <string>Standard Translation</string>
        </property>
       </widget>
      </item>
      <item row="6" column="1">
       <widget class="QLabel" name="label_standardzoom">
        <property name="toolTip">
-        <string>Standard step for zooming</string>
+        <string>Standard step for zooming.</string>
        </property>
        <property name="text">
         <string>Standard Zoom Factor</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="2">
-      <widget class="QLineEdit" name="lineEdit_pointcloudfolder">
-       <property name="toolTip">
-        <string>Path to the folder that contains the point cloud files</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="1">
-      <widget class="QLabel" name="title_userinterface">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">margin-top: 10px</string>
-       </property>
-       <property name="text">
-        <string>User Interface</string>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="1">
-      <widget class="QLabel" name="label_backgroundcolor">
-       <property name="toolTip">
-        <string>Background color of the point cloud viewer (rgb)</string>
-       </property>
-       <property name="text">
-        <string>Background Color</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QLabel" name="label_pointcloudfolder">
        <property name="toolTip">
-        <string>Path to the folder that contains the point cloud files</string>
+        <string>Path to the folder that contains the point cloud files.</string>
        </property>
        <property name="text">
         <string>Point Cloud Folder</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="2">
-      <widget class="QLineEdit" name="lineEdit_pointcolor">
+     <item row="4" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_pointsize">
        <property name="toolTip">
-        <string>Point color for colorless point clouds (r,g,b)</string>
+        <string>Rasterized diameter of each point from the point cloud.</string>
+       </property>
+       <property name="decimals">
+        <number>1</number>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="1" colspan="2">
+      <widget class="QCheckBox" name="checkBox_showbboxorientation">
+       <property name="toolTip">
+        <string>Visualizes the object's orientation with an arrow.</string>
+       </property>
+       <property name="text">
+        <string>Show Bounding Box Orientation</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLineEdit" name="lineEdit_pointcloudfolder">
+       <property name="toolTip">
+        <string>Path to the folder that contains the point cloud files.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="1">
+      <widget class="QLabel" name="label_backgroundcolor">
+       <property name="toolTip">
+        <string>Background color of the point cloud viewer (rgb).</string>
+       </property>
+       <property name="text">
+        <string>Background Color</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QLineEdit" name="lineEdit_labelfolder">
+       <property name="toolTip">
+        <string>Path to the folder where the label files will be saved.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="1" colspan="2">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Note: Some settings might require a restart to take effect!</string>
        </property>
       </widget>
      </item>
@@ -280,7 +305,7 @@
      <item row="8" column="1" colspan="2">
       <widget class="QCheckBox" name="checkBox_zrotationonly">
        <property name="toolTip">
-        <string>Only allow z-rotation of bounding boxes. Deactivate to also label x- &amp; y-rotation</string>
+        <string>Only allow z-rotation of bounding boxes. Deactivate to also label x- &amp; y-rotation.</string>
        </property>
        <property name="text">
         <string>Z-Rotation-Only Mode (otherwise rotation around x, y and z)</string>
@@ -288,7 +313,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLabel" name="_labelformat">
+      <widget class="QLabel" name="label_labelformat">
        <property name="toolTip">
         <string>Format for exporting labels.</string>
        </property>
@@ -300,7 +325,7 @@
      <item row="6" column="1">
       <widget class="QLabel" name="label_stdbboxwidth">
        <property name="toolTip">
-        <string>Default width of the bounding box (for picking mode)</string>
+        <string>Default width of the bounding box (for picking mode).</string>
        </property>
        <property name="text">
         <string>Standard Bounding Box Width</string>
@@ -317,7 +342,7 @@
      <item row="11" column="1">
       <widget class="QLabel" name="label_stdbboxtranslation">
        <property name="toolTip">
-        <string>Standard step for translating the bounding box (meter)</string>
+        <string>Standard step for translating the bounding box (meter).</string>
        </property>
        <property name="text">
         <string>Standard Translation Step</string>
@@ -357,48 +382,38 @@
      <item row="12" column="1">
       <widget class="QLabel" name="label_stdbboxrotation">
        <property name="toolTip">
-        <string>Standard step for rotating the bounding box (degree)</string>
+        <string>Standard step for rotating the bounding box (degree).</string>
        </property>
        <property name="text">
         <string>Standard Rotation Step</string>
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
-      <widget class="QLabel" name="label_viewingprecision">
-       <property name="toolTip">
-        <string>Minimum value for the length, width and height of a bounding box.</string>
-       </property>
-       <property name="text">
-        <string>Viewing Precision</string>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="2">
       <widget class="QLineEdit" name="lineEdit_standardobjectclass">
        <property name="toolTip">
-        <string>Default object class for new bounding boxes</string>
+        <string>Default object class for new bounding boxes.</string>
        </property>
       </widget>
      </item>
      <item row="13" column="2">
       <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxscaling">
        <property name="toolTip">
-        <string>Standard step for scaling the bounding box</string>
+        <string>Standard step for scaling the bounding box.</string>
        </property>
       </widget>
      </item>
      <item row="11" column="2">
       <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxtranslation">
        <property name="toolTip">
-        <string>Standard step for translating the bounding box (meter)</string>
+        <string>Standard step for translating the bounding box (meter).</string>
        </property>
       </widget>
      </item>
      <item row="5" column="1">
       <widget class="QLabel" name="label_stdbboxlength">
        <property name="toolTip">
-        <string>Default length of the bounding box (for picking mode)</string>
+        <string>Default length of the bounding box (for picking mode).</string>
        </property>
        <property name="text">
         <string>Standard Bounding Box Length</string>
@@ -408,7 +423,7 @@
      <item row="12" column="2">
       <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxrotation">
        <property name="toolTip">
-        <string>Standard step for rotating the bounding box (degree)</string>
+        <string>Standard step for rotating the bounding box (degree).</string>
        </property>
       </widget>
      </item>
@@ -441,7 +456,7 @@
      <item row="7" column="2">
       <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxheight">
        <property name="toolTip">
-        <string>Default height of the bounding box (for picking mode)</string>
+        <string>Default height of the bounding box (for picking mode).</string>
        </property>
       </widget>
      </item>
@@ -458,14 +473,14 @@
      <item row="5" column="2">
       <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxlength">
        <property name="toolTip">
-        <string>Default length of the bounding box (for picking mode)</string>
+        <string>Default length of the bounding box (for picking mode).</string>
        </property>
       </widget>
      </item>
      <item row="13" column="1">
       <widget class="QLabel" name="label_stdbboxscaling">
        <property name="toolTip">
-        <string>Standard step for scaling the bounding box</string>
+        <string>Standard step for scaling the bounding box.</string>
        </property>
        <property name="text">
         <string>Standard Scaling Step</string>
@@ -481,17 +496,10 @@
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Default object class for new bounding boxes</string>
+        <string>Default object class for new bounding boxes.</string>
        </property>
        <property name="text">
         <string>Standard Object Class</string>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="2">
-      <widget class="QSpinBox" name="spinBox_viewingprecision">
-       <property name="toolTip">
-        <string>Minimum value for the length, width and height of a bounding box.</string>
        </property>
       </widget>
      </item>
@@ -540,7 +548,7 @@
      <item row="7" column="1">
       <widget class="QLabel" name="label_stdbboxheight">
        <property name="toolTip">
-        <string>Default height of the bounding box (for picking mode)</string>
+        <string>Default height of the bounding box (for picking mode).</string>
        </property>
        <property name="text">
         <string>Standard Bounding Box Height</string>
@@ -550,7 +558,7 @@
      <item row="6" column="2">
       <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxwidth">
        <property name="toolTip">
-        <string>Default width of the bounding box (for picking mode)</string>
+        <string>Default width of the bounding box (for picking mode).</string>
        </property>
       </widget>
      </item>
